# SysProg2_Ex4

./: AscendingOrderIterator.h  CMakeLists.txt  DescendingOrder.h  Main  Makefile  MiddleOutOrderIterator.h  MyContainer.h  OrderIterator.h  README.md  REDME.md  ReverseOrderIterator.h  SideCrossOrderIterator.h  main.cpp  test_AscendingOrderIterator  test_AscendingOrderIterator.cpp  test_DescendingOrder  test_DescendingOrder.cpp  test_MiddleOutOrderIterator  test_MiddleOutOrderIterator.cpp  test_MyContainer  test_MyContainer.cpp  test_OrderIteratorTests  test_OrderIteratorTests.cpp  test_ReverseOrderIterator  test_ReverseOrderIterator.cpp  test_SideCrossOrderIterator  test_SideCrossOrderIterator.cpp
